--- a/.env
+++ b/.env
@@ -27,8 +27,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=465
-MAIL_USERNAME=pedidohsushi@gmail.com
-MAIL_PASSWORD=inodev2019
+MAIL_USERNAME=tiendavirtualagricola@gmail.com
+MAIL_PASSWORD=duoc.2019
 MAIL_ENCRYPTION=ssl
 
 AWS_ACCESS_KEY_ID=
